<resources>
    <string name="app_name">CheckIn</string>
    <string name="action_settings">Settings</string>
    <string name="gps">GPS</string>
    <string name="current_location">Current Location</string>
    <string name="last_updated">Last Updated</string>
    <string name="not_found">Not Found</string>
    <string name="default_last_updated">1 Jan 1970, 00:00:00</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid latitude/longitude used</string>
    <string name="no_address_found">No address found</string>
    <string name="im_here">I\'M HERE</string>
    <string name="nearby_places">Nearby Places</string>
</resources>
