<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.checkinapp.checkin.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/AppTheme.SubActionBar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps"
            android:layout_alignParentLeft="true"
            style="@style/AppTheme.SubActionBar.TextView"/>
        <TextView
            android:id="@+id/last_updated_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/default_last_updated"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/gps_share_layout">
            <TextView
                android:id="@+id/gps_not_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_found"
                style="@style/Content"
                android:textStyle="italic"
                android:textColor="@android:color/darker_gray"
                />
            <TextView
                android:id="@+id/gps_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                style="@style/Content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@id/gps_share_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">
            <ImageView
                android:id="@+id/show_in_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:src="@android:drawable/ic_menu_mapmode"/>
            <ImageView
                android:id="@+id/share_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_share"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.SubActionBar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_location"
            style="@style/AppTheme.SubActionBar.TextView"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/share_location">
            <TextView
                android:id="@+id/location_content"
                style="@style/Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/location_not_found"
                style="@style/Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_found"/>
        </LinearLayout>
        <ImageView
            android:id="@id/share_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            style="@style/Content"
            android:src="@android:drawable/ic_menu_share"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.SubActionBar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nearby_places"
            style="@style/AppTheme.SubActionBar.TextView"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            style="@style/AppTheme.SubActionBar.ImageButton"
            android:src="@drawable/powered_by_google_dark"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/places_not_found"
        style="@style/Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_found"/>
    <ListView
        android:id="@+id/list_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
</LinearLayout>
